[tool.poetry]
name = "credit-score-prediction"
version = "0.1.0"
description = "An end-to-end example of how to apply software engineering practices for ML training, testing and deployment"
authors = ["David Tan <davidtan@thoughtworks.com>"]

[tool.poetry.dependencies]
pandas = "2.1.0"
scikit-learn = "1.3.0"
fastapi = "0.103.1"
pydantic = "2.3.0"
uvicorn = "0.23.2"
python = "^3.9"
precisely = "^0.1.9"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
black = "23.9.1"
pylint = "2.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"