[tool.poetry]
name = "credit-score-prediction"
version = "0.1.0"
description = "An end-to-end example of how to apply software engineering practices for ML training, testing and deployment"
authors = ["David Tan <davidtan@thoughtworks.com>"]

[tool.poetry.dependencies]
pandas = "2.1.4"
scikit-learn = "1.3.2"
fastapi = "0.106.0"
pydantic = "2.5.2"
uvicorn = "0.25.0"
python = "^3.9"
precisely = "^0.1.9"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
black = "23.12.1"
pylint = "3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"